--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,4 @@
 @import '../assets/css/fonts.css';
 @import '../assets/css/inputs.css';
 @import '../assets/css/tables.css';
+@import "../assets/vendor/fonts/iconify/iconify.css";
