--- a/public/assets/css/fonts.css
+++ b/public/assets/css/fonts.css
@@ -1,48 +1,62 @@
 @font-face {
   font-family: 'Sarabun';
-  src: url('/fonts/Sarabun-Thin.ttf') format('truetype');
+  src:
+    url('/fonts/Sarabun-Thin.woff2') format('woff2'),
+    url('/fonts/Sarabun-Thin.woff') format('woff');
   font-weight: 100;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Sarabun';
-  src: url('/fonts/Sarabun-Light.ttf') format('truetype');
+  src:
+    url('/fonts/Sarabun-Light.woff2') format('woff2'),
+    url('/fonts/Sarabun-Light.woff') format('woff');
   font-weight: 300;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Sarabun';
-  src: url('/fonts/Sarabun-Regular.ttf') format('truetype');
+  src:
+    url('/fonts/Sarabun-Regular.woff2') format('woff2'),
+    url('/fonts/Sarabun-Regular.woff') format('woff');
   font-weight: 400;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Sarabun';
-  src: url('/fonts/Sarabun-Medium.ttf') format('truetype');
+  src:
+    url('/fonts/Sarabun-Medium.woff2') format('woff2'),
+    url('/fonts/Sarabun-Medium.woff') format('woff');
   font-weight: 500;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Sarabun';
-  src: url('/fonts/Sarabun-SemiBold.ttf') format('truetype');
+  src:
+    url('/fonts/Sarabun-SemiBold.woff2') format('woff2'),
+    url('/fonts/Sarabun-SemiBold.woff') format('woff');
   font-weight: 600;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Sarabun';
-  src: url('/fonts/Sarabun-Bold.ttf') format('truetype');
+  src:
+    url('/fonts/Sarabun-Bold.woff2') format('woff2'),
+    url('/fonts/Sarabun-Bold.woff') format('woff');
   font-weight: 700;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Sarabun';
-  src: url('/fonts/Sarabun-ExtraBold.ttf') format('truetype');
+  src:
+    url('/fonts/Sarabun-ExtraBold.woff2') format('woff2'),
+    url('/fonts/Sarabun-ExtraBold.woff') format('woff');
   font-weight: 800;
   font-style: normal;
 }
